
syntax = "proto3";

package products;

option csharp_namespace = "ProductService.Grpc";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
  string imageUrl = 6;
  bool isActive = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message GetProductsRequest {
  optional string category = 1;
  optional bool isActive = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message GetProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message GetProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  string category = 4;
}

message UpdateProductRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional double price = 4;
  optional string category = 5;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

service ProductsService {
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
  rpc GetProduct (GetProductRequest) returns (Product);
  rpc CreateProduct (CreateProductRequest) returns (Product);
  rpc UpdateProduct (UpdateProductRequest) returns (Product);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}
